2010-02-06  Miguel de Icaza  <miguel@novell.com>

	* eval.cs (CompileBlock): Also undo if there are problems during
	semantic analysis, fixes various cases where invalid C# code would
	be reported, but the internal changes would not be undone.

2010-02-03  Miguel de Icaza  <miguel@novell.com>

	* driver.cs: Change the --fatal flag to allow a number to be
	passed, this ignores the first N fatal errors.   Useful to debug
	errors that do not happen on the first hit.

	* cs-parser.jay (invocation_expression): accept both the
	CLOSE_PARENS and COMPLETE_COMPLETION, this allows completions
	inside an invocation.

	* driver.cs: Expose FatalErrors.

	* eval.cs: Initialize the printer's Fatal property from the
	Driver's FatalError flag, this allows csharp --fatal to work
	again. 

	Add support for calling Describe (typeof (TYPE)) if the expression
	entered is a TYPE.
	

2010-02-02  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #574991
	* rootcontext.cs, class.cs, driver.cs: Hide enhanced warnings behind
	--lint.

2010-02-02  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #575986
	* expression.cs: Don't mutate typeof type definitions.

2010-01-28  Marek Safar  <marek.safar@gmail.com>

	* decl.cs: Use only one set of modifiers.

2010-01-26  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #573329
	* eval.cs: Don't disable error reporting completely on silent mode.
	
2010-01-25  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #573312
	* constant.cs, expression.cs, ecore.cs: Emit correct offset for
	pointer index of unknown size types greater than 2.

2010-01-15  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Use only 1 member kind enum.

2010-01-15  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Add event specification.

2010-01-14  Marek Safar  <marek.safar@gmail.com>

	* membercache.cs: Extracted from decl.cs.
	
	* *.cs: Put more infrastructure in place.

2010-01-13  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Add property specification, unused yet.
